--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Kak-kak games",
   "scripts": {
-    "watch_games": "light-server -s games -w \"docs/* # # reload\"",
+    "watch_games": "light-server -s docs -w \"docs/* # # reload\"",
     "watch_lib": "rollup -c -w",
     "build_lib_typings": "tsc --declaration --emitDeclarationOnly --target es2015 --module commonjs --outFile docs/_bundle.d.ts src/main.ts"
   },
